--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "monsters-inc-room",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "five-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
-  "devDependencies": {
-    "five-server": "^0.1.9"
-  }
+    "name": "monsters-inc-room",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "type": "module",
+    "devDependencies": {
+        "vite": "^4.3.6"
+    },
+    "dependencies": {
+        "three": "^0.152.2"
+    }
 }
